@@ -1,3 +1,4 @@
+ - Fix bug in 3D uniform mesh refinement
  - Add built-in meshes UnitTriangle and UnitTetrahedron
  - Only create output directories when they don't exist
  - Make it impossible to set the linear algebra backend to something illegal
